--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,31 @@
     max-width: 1280px;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased
+    -webkit-font-smoothing: antialiased;
+    font-family: "Inter", Arial, sans-serif;
+    background-color: #2A2C2F;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .page {
+        max-width: 1024px
+    }   
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+    .page {
+        max-width: 768px;
+    }   
+}
+
+@media screen and (max-width: 425px) {
+    .page {
+        max-width: 320px;
+    }   
 }
