Сверстал сайт и сделал адаптив под все разрешения в макете

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,34 +1,29 @@
 .header {
-  height: 52px;
+  max-height: 52px;
   max-width: 1184px;
   display: flex;
   justify-content: space-between;
-  padding: 52px 48px 28px 48px;
+  padding: 28px 48px 56px 48px;
   
 }
 
-
-
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
   .header {
-       max-width: 1024px;
+    max-width: 982px;
+    padding: 28px 48px 48px 48px;
   }   
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .header {
-       max-width: 768px;
-   }   
+    max-width: 720px;
+    padding: 28px 24px 48px 24px;
+  } 
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .header {
-       max-width: 425px;
-   }   
-}
-
-@media screen and (max-width: 425px) {
-  .header {
-       max-width: 320px;
-   }   
+    max-width: 288px;
+    padding: 16px 16px 48px 16px;
+  }
 }
