--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,3 +1,18 @@
 .cover__subtitle {
-    
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    max-width: 360px;
+    margin: 32px 0px 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+    .cover__subtitle{
+        font-size: 14px;
+        line-height: 16px;
+        max-width: 288px;
+        margin: 16px 16px 33px 16px;
+    } 
 }
