--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,3 +1,26 @@
 .cover__title {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 76px;
+    text-align: center;
+    max-width: 560px;
+    margin: 0;
     
 }
+
+@media screen and (max-width: 1024px) {
+    .cover__title{
+        max-width: 560px;
+    } 
+}
+
+@media screen and (max-width: 560px) {
+    .cover__title{
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 244px;
+    margin: 33px auto 0px auto;
+    } 
+}
+
