--- a/blocks/footer/__column/footer__column.css
+++ b/blocks/footer/__column/footer__column.css
@@ -1,4 +1,12 @@
 .footer__column {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__column {
+      flex-direction: column;
+      justify-content: left;
+      align-items: flex-start;
+  }
 }
