--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,25 @@
-/* Определяю стили для блока footer */
 .footer {
-  padding-top: 60px;
-  padding-bottom: 40px;
-  background-color: #1f1f1f;
-  min-height: 350px;
-  display: flex;
-  justify-content: center;
-  box-sizing: border-box;
+  padding: 92px 48px 24px 48px;
+  max-width: 1184px;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+      padding: 92px 48px 24px 48px;
+      max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+      padding: 88px 24px 24px 24px;
+      max-width: 720px;
+}
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+      padding: 64px 118px 24px 16px;
+      max-width: 1184px;
+  }
 }
