--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -2,4 +2,13 @@
     display: flex;
     align-items: flex-end;
     gap: 18px;
+    
+}
+
+@media screen and (max-width: 320px) {
+    .header__lang {
+        width: 142px;
+        align-items: center;
+        justify-content: end;
+    }   
 }
