--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,3 +1,11 @@
 .intro__list {
-    
+    display: flex;
+    flex-direction: column;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 18px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
