--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,28 @@
 .intro {
-    
+    max-width: 690px;
+    max-height: 429px;
+    padding: 92px 442px 92px 148px;
+    box-sizing: content-box;
+}
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        padding: 92px 286px 92px 48px;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    .intro {
+      max-width: 720px;
+      max-height: 429px;
+      padding: 88px 24px 88px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+      max-width: 288px;
+      max-height: 754px;
+      padding: 64px 16px 64px 16px;
+    }
 }
