--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,3 +1,23 @@
 .lead__title {
-    
+    font-style: normal;
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 100px;
+    text-align: center;
+    max-width: 720px;
+    max-height: 200px;
+    margin: 0px auto 32px auto;
 }
+
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        max-width: 288px;
+        max-height: 88px;
+        font-size: 40px;
+        line-height: 44px;
+        margin: 0px auto 16px auto;
+    }
+}
+
+
