--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,37 @@
 .lead {
-    
+    max-width: 984px;
+    max-height: 1005px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    gap: auto;
 }
+
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        margin: 0 auto;
+        max-width: 928px;
+        max-height: 962px;
+    } 
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        margin: 0;
+        max-width: 768px;
+        max-height: 862px;
+    } 
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        margin: 0;
+        max-width: 320px;
+        max-height: 406px;
+    }
+}
+
+
