--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,3 +1,39 @@
 .photo-grid {
-    
+    max-width: 1184px;
+    max-height: 671px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 16px 16px;
+    padding: 0px 48px 0px 48px;
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid {
+        max-width: 928px;
+        max-height: 942px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        max-width: 720px;
+        max-height: 1664px;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(6, auto);
+        padding: 0px 24px 0px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        max-width: 288px;
+        max-height: 2724px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+        row-gap: 12px;
+        padding: 0px 16px 0px 16px;
+    }
 }
