--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,5 +10,6 @@
 @media screen and (max-width: 320px) {
     .footer__copyright {
         padding: 48px 0px 0px 0px;
+        line-height: 14px;
     }
   }
