--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,6 +9,17 @@
     margin: 0px auto 32px auto;
 }
 
+@media screen and (max-width: 690px) {
+    .lead__title {
+        font-size: auto;
+        line-height: auto;
+        max-width: 288px;
+        max-height: 88px;
+        font-size: 40px;
+        line-height: 44px;
+        margin: 0px auto 16px auto;
+    }
+}
 
 @media screen and (max-width: 320px) {
     .lead__title {
