--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,8 +2,8 @@
     max-width: 1184px;
     max-height: 671px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 16px 16px;
     padding: 0px 48px 0px 48px;
 }
@@ -12,12 +12,12 @@
     .photo-grid {
         max-width: 928px;
         max-height: 942px;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(4, auto);
     }
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 890px) {
     .photo-grid {
         max-width: 720px;
         max-height: 1664px;
@@ -31,8 +31,8 @@
     .photo-grid {
         max-width: 288px;
         max-height: 2724px;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(12, 1fr);
+        grid-template-columns: auto;
+        grid-template-rows: repeat(12, auto);
         row-gap: 12px;
         padding: 0px 16px 0px 16px;
     }
