--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,7 +4,6 @@
     font-size: 18px;
     line-height: 29.34px;
     margin: 0px 0px 26px 0px;
-    height: min-content;
     text-align: left;
     max-width: 484px;
 }
@@ -24,14 +23,18 @@
         font-size: 16px;
         line-height: 26.08px;
         margin: 0px 0px 25px 0px;
-        max-height: 352px;
+        max-width: 352px;
   }
 }
 
 @media screen and (max-width: 320px) {
     .place__paragraph {
-        padding: 0px 16px 0px 16px;
-        max-height: 288px;
+        margin: 0px 16px 25px 16px;
+        max-width: 288px;
+        white-space: pre-line;
+  }
+    .place__paragraph:last-of-type {
+        margin: 0px 16px 0px 16px;
   }
 }
 
