--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,7 +3,7 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    width: 460px;
+    max-width: 460px;
     margin: 0;
     text-align: left;
     padding: 0px;
@@ -13,6 +13,7 @@
     .place__title {
         font-size: 42px;
         line-height: 46px;
+        max-width: 329px;
   }
 }
 
@@ -22,4 +23,5 @@
         font-size: 32px;
         line-height: 35px;
     }
+
 }
