--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
     display: grid;
-    grid-template-columns: 460px auto;
+    grid-template-columns: 460px 484px;
     grid-template-rows: repeat(2, auto);
     gap: 48px 40px;
     margin: 0;
@@ -9,16 +9,24 @@
 
 @media screen and (max-width: 1024px) {
     .place {
-        grid-template-columns: 440px auto;
+        grid-template-columns: 440px 456px;
         gap: 48px 32px;
     }
   }
 
 @media screen and (max-width: 768px) {
     .place {
-        grid-template-columns: 340px auto;
+        grid-template-columns: 340px 352px;
         gap: 48px 28px;
   }
+}
+
+@media screen and (max-width: 690px) {
+    .place {
+        row-gap: 32px;
+        grid-template-columns: 320px;
+        grid-template-rows: repeat(4, auto);
+    }
 }
 
 @media screen and (max-width: 320px) {
