--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -14,7 +14,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .page {
-        max-width: 1024px
+        max-width: 1024px;
     }   
 }
 
