--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -22,12 +22,12 @@
     left: 0;
     bottom: 0;
     right: 0;
-    opacity: 0.2;
+    opacity: .8;
     background-color: #2A2C2F;
     z-index: -1;
 }
 
-  .cover__overlay:hover::before {
+.cover__overlay:hover::before {
     opacity: .8;
 }
 
