--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,4 +5,6 @@
     line-height: 12px;
     letter-spacing: 0.2em;
     margin: 0px 0px 12px 0px;
+    text-transform: uppercase;
+    color: #AAAAAA;
 }
