--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-self: flex-end;
+    align-items: flex-start;
 }
 
 @media screen and (max-width: 320px) {
