--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,28 @@
 .lead__image {
-    width: 100%;
+    max-width: 984px;
+    margin: 0;
+}
+
+@media screen and (max-width: 1200px) {
+    .lead__image {
+        max-width: 928px;
+    } 
+}
+
+@media screen and (max-width: 1023px) {
+    .lead__image {
+        max-width: 767px;
+    } 
+}
+
+@media screen and (max-width: 767px) {
+    .lead__image {
+        max-width: 425px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .lead__image {
+        max-width: 320px;
+    }
 }
