--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,30 +2,26 @@
     max-width: 984px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin: 0 auto;
+    padding: 0;
     gap: auto;
 }
 
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
     .lead {
         max-width: 928px;
     } 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead {
         margin: 0;
         max-width: 768px;
     } 
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead {
         max-width: 320px;
     }
 }
-
-
