--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,11 +4,12 @@
     font-size: 16px;
     line-height: 26.08px;
     margin: 0;
-    padding: 40px 0px 33px 0px;
+    margin: 40px 0px 33px 0px;
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 767px) {
     .intro__text {
-        padding: 40px 0px 34px 0px;
+        max-width: 288px;
+        margin: 40px 0px 34px 0px;
     }
 }
