--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 8px 0px 0px 0px;
     text-align: left;
-    width: 100%;
+    max-width: 158px;
 }
 
 @media screen and (max-width: 768px) {
