--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -11,16 +11,16 @@
 @media screen and (max-width: 1024px) {
     .page {
         max-width: 1024px;
-    }   
+    }
 }
 
 @media screen and (max-width: 1023px) {
     .page {
         max-width: 768px;
-    }   
+    }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 767px) {
     .page {
         max-width: 425px;
     }
@@ -28,6 +28,7 @@
 
 @media screen and (max-width: 425px) {
     .page {
+        margin: 0;
         max-width: 320px;
-    }   
+    }
 }
