--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -6,3 +6,20 @@
     margin: 0;
 }
 
+/* @media screen and (max-width: 1200px) {
+    .photo-grid__item {
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .photo-grid__item {
+        max-width: 352px;
+    }
+}
+
+@media screen and (max-width: 766px) {
+    .photo-grid__item {
+        width: 288px;
+    }
+} */
