--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,32 +4,32 @@
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(3, auto);
     gap: 16px 16px;
-    padding: 0px 48px 0px 48px;
+    margin: 0px 48px 0px 48px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
     .photo-grid {
         max-width: 928px;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3, 300px);
         grid-template-rows: repeat(4, auto);
     }
 }
 
-@media screen and (max-width: 890px) {
+@media screen and (max-width: 1023px) {
     .photo-grid {
         max-width: 720px;
-        grid-template-columns: repeat(2, auto);
+        grid-template-columns: repeat(2, 352px);
         grid-template-rows: repeat(6, auto);
-        padding: 0px 24px 0px 24px;
+        margin: 0px 24px 0px 24px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
         max-width: 288px;
-        grid-template-columns: auto;
+        grid-template-columns: 288px;
         grid-template-rows: repeat(12, auto);
         row-gap: 12px;
-        padding: 0px 16px 0px 16px;
+        margin: 0px 16px 0px 16px;
     }
 }
