--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,23 @@
 .place__image {
+    padding: 0;
+    margin: 0;
     max-width: 460px;
-    max-height: 460px;
 }
 
 @media screen and (max-width: 1200px) {
     .place__image {
         max-width: 440px;
-        max-height: 440px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place__image {
         max-width: 340px;
-        max-height: 340px;
     }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
     .place__image {
         max-width: 320px;
-        max-height: 320px;
     }
 }
