--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -21,10 +21,10 @@
     }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 767px) {
     .place {
         row-gap: 32px;
-        grid-template-columns: 320px;
+        grid-template-columns: auto;
         grid-template-rows: repeat(4, auto);
     }
 }
