--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(3, auto);
     gap: 16px 16px;
-    margin: 0px 48px 0px 48px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1200px) {
@@ -20,7 +20,6 @@
         max-width: 720px;
         grid-template-columns: repeat(2, 352px);
         grid-template-rows: repeat(6, auto);
-        margin: 0px 24px 0px 24px;
     }
 }
 
@@ -30,6 +29,5 @@
         grid-template-columns: 288px;
         grid-template-rows: repeat(12, auto);
         row-gap: 12px;
-        margin: 0px 16px 0px 16px;
     }
 }
