--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,7 @@
     grid-template-columns: 460px 484px;
     grid-template-rows: repeat(2, auto);
     gap: 48px 40px;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
