--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,7 +3,7 @@
     padding: 92px 148px 92px 148px;
     display: grid;
     row-gap: 80px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1200px) {
